--- a/60.html
+++ b/60.html
@@ -6,6 +6,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>60 date method</title>
     <script>
+        // var now=new Date();
+        // // document.write(now);
+        // // document.write(now.toDateString());
+        // // document.write(now.getFullYear());
+        // // document.write(now.getMonth());
+        // document.write(now.getDay());
+
+
+        // var now=new Date('January 5 2010');
+        // // document.write(now);
+        // document.write(now.toDateString()+"<br>");
+        // document.write(now.getFullYear()+"<br>");
+        // document.write(now.getMonth()+"<br>");
+        // document.write(now.getDay()+"<br>");
+
+
+        // var now=new Date();
+        // document.write(now.getHours()+"<br>");
+        // document.write(now.getMinutes()+"<br>");
+        // document.write(now.getSeconds()+"<br>");
+        // document.write(now.getMilliseconds()+"<br>");
+
+
+        // var now=new Date('January 5 2010');
+        // document.write(now.getHours()+"<br>");
+        // document.write(now.getMinutes()+"<br>");
+        // document.write(now.getSeconds()+"<br>");
+        // document.write(now.getMilliseconds()+"<br>");
+
+        // var now=new Date();
+        // // now.setDate(20);
+        // // now.setFullYear(2020);
+        // // now.setMonth(4);
+        // now.setHours(14);
+        // document.write(now);
+
+
+        var now=new Date();
+        document.write(now.getDate()+"/"+now.getMonth()+"/"+now.getFullYear());
+
+
+
+
   
 
 
